--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "svix": "^1.17.0",
+    "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.3.3"
   },
   "devDependencies": {
